--- a/kernel/build.gradle
+++ b/kernel/build.gradle
@@ -39,10 +39,12 @@ android {
 }
 
 def retrofitVersion = '2.4.0'
+def supportLibraryVersion = "27.1.1"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "com.android.support:appcompat-v7:27.1.1"
+    api "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:design:$supportLibraryVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
