--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,34 @@ android {
         renderscriptSupportModeEnabled true
 
     }
+    signingConfigs {
+        debug {
+            keyAlias "clothes"
+            keyPassword "clothes1314"
+            storeFile file('/Users/xmq/Desktop/clothes/clothes.jks')
+            storePassword "clothes1314"
+        }
+        release {
+            keyAlias "clothes"
+            keyPassword "clothes1314"
+            storeFile file('/Users/xmq/Desktop/clothes/clothes.jks')
+            storePassword "clothes1314"
+        }
+    }
     buildTypes {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
             buildConfigField "String", "BASE_URL", "\"http://10.99.24.159:8081\""
+            buildConfigField "Boolean", "LOG_DEBUG", 'true'//日志输出
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", "\"http://10.99.24.159:8081\""
+            signingConfig signingConfigs.release
+            buildConfigField "String", "BASE_URL", "\"http://39.106.43.155:8081\""
+            buildConfigField "Boolean", "LOG_DEBUG", 'true'//日志输出
         }
     }
 }
@@ -50,6 +68,7 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation project(":kernel")
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:design:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
