[add] 增加商品详情

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         </activity>
         <activity android:name=".saledetail.SaleDetailActivity">
         </activity>
+        <activity android:name=".storelist.StoreListActivity">
+        </activity>
     </application>
 
 </manifest>
